agregando shadown al tootip de facturacion modo light

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </div>`
         tippy('#cp-fac', {
             content: _cont,
-            allowHTML: true
+            allowHTML: true,
+            theme: 'tooltip-facturacion-content'
         });
     </script>
 </body>
